src/components/wrappers/Prose.module.css
.prose {
  color: var(--color-bblack-950);

  p {
    width: 95%;
    margin-block: calc(var(--spacing) * 4);
  }

  a {
    text-decoration-line: none;
    color: var(--color-blue-500);

    &:visited {
      color: var(--color-purple-700);
    }

    &:hover {
      color: var(--color-purple-900);
    }
  }

  img {
    margin-top: 0;
    margin-bottom: 0;
    border-radius: var(--radius-md);
    box-shadow: var(--shadow-sm);
  }

  @variant dark {
    & {
      color: var(--color-bblack-100);

      a {
        color: var(--color-blue-400);

        &:visited {
          color: var(--color-purple-300);
        }

        &:hover {
          color: var(--color-purple-400);
        }
      }
    }
  }
}

